# BoneFI

./: .gitignore  Makefile  README.md  commit.txt  docker.bat  pyproject.toml  railway.json  requirements.txt
.github/workflows/: deploy.yml  test.yml
backend/data-analysis/: .coverage  .env.example  Dockerfile  pytest.ini  requirements.txt  run_api.py
backend/data-analysis/src/api/: main.py
backend/data-analysis/src/charts/: combined_chart.py
backend/data-analysis/src/core/: config.py  database.py  error_handler.py  rate_limiter.py  safe_executor.py
backend/data-analysis/src/services/: __init__.py  analyzer.py  json_encoder.py  scheduler.py
backend/data-analysis/static/: docs.html
backend/data-analysis/tests/: conftest.py  test_analyzer.py  test_api.py  test_revolutionary_metrics.py
backend/data-management/: .coverage  .env.example  Dockerfile  migrate.py  openapi.json  pytest.ini  requirements.txt  run_api.py
backend/data-management/src/: __init__.py
backend/data-management/src/api/: main.py
backend/data-management/src/collectors/: solana_collector.py
backend/data-management/src/db/: models.py  (+4 more)
backend/data-management/static/: docs.html
backend/data-management/tests/: conftest.py  test_collector.py  test_models.py  test_queue.py  test_redis.py
deploy/: .env  .env.example.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf
docs/: README.md  commit.txt
frontend/client-management/web-dashboard/: BoneFI.html
scripts/: run_tests.bat
tests/: conftest.py  pytest.ini  test_integration.py
(+14 files in other folders)
